--- a/marg_vs_divorce_viz.ipynb
+++ b/marg_vs_divorce_viz.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "5a44b844-a3f8-4f89-bca5-694e4a31305c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -887,6 +889,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "694bcbb8-17cf-44b9-b12d-1fc6e16bdf87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8796e8a3-6334-4d58-b73a-7f4676937993",
    "metadata": {},
    "outputs": [],
    "source": []
